# huffman

./: CMakeLists.txt  LICENSE  README.md  bitstream.cpp  bitstream.hpp  huffman.cpp  install.sh  main.cpp  node.cpp  node.hpp
src/: huffman.cpp  huffman.hpp  main.cpp
src/gui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
tests/: CMakeLists.txt
tests/validAlgTest/: CMakeLists.txt  validAlgTest.cpp
tests/validAlgTest/testTextFiles/: text1.txt  text2.txt  text3.txt  text4.txt
